--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "babel-register": "^6.18.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0"
   }
 }
