--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "cheerio": "^0.22.0",
     "material-ui": "^0.16.5",
     "node-fetch": "^1.6.3",
     "react": "^15.4.1",
