--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Darin Minamoto",
   "license": "GNU GPL 3",
   "devDependencies": {
-    "electron": "^1.4.13"
+    "babel-jest": "^18.0.0",
+    "electron": "^1.4.13",
+    "jest": "^18.0.0",
+    "react-test-renderer": "^15.4.1"
   },
   "dependencies": {
     "babel-core": "^6.21.0",
