--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-register": "^6.18.0",
     "cheerio": "^0.22.0",
     "immutable": "^3.8.1",
+    "lodash": "^4.17.3",
     "material-ui": "^0.16.5",
     "node-fetch": "^1.6.3",
     "react": "^15.4.1",
