--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "bluebird": "^3.4.7",
     "cheerio": "^0.22.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.3",
