--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-register": "^6.18.0",
     "bluebird": "^3.4.7",
     "cheerio": "^0.22.0",
+    "fs-extra": "^1.0.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.3",
     "material-ui": "^0.16.5",
