--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.3",
     "material-ui": "^0.16.5",
+    "mimetype": "0.0.8",
     "node-fetch": "^1.6.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -37,6 +38,7 @@
     "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
   }
 }
