--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-fetch": "^1.6.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-measure": "^1.4.6",
     "react-redux": "^5.0.1",
     "react-redux-toastr": "^4.4.2",
     "react-router": "^3.0.0",
