--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux-toastr": "^4.4.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-router-scroll": "^0.4.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
